--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragment_main_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
