--- a/app/src/main/res/layout/podcast_row.xml
+++ b/app/src/main/res/layout/podcast_row.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/podcast_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:textSize="22sp"
