add skeleton for podcast details view, replace progress widget with swipe to refresh, add new dependencies, rename files to PodcastList*

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="ba.codingstoic.MainFragment"
+        android:name="ba.codingstoic.podcast.PodcastListFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/podcast_list_fragment" />
 </navigation>
