--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,5 +9,17 @@
         android:id="@+id/mainFragment"
         android:name="ba.codingstoic.podcast.PodcastListFragment"
         android:label="fragment_main"
-        tools:layout="@layout/podcast_list_fragment" />
+        tools:layout="@layout/podcast_list_fragment">
+        <action
+            android:id="@+id/action_mainFragment_to_podcastDetailsFragment"
+            app:destination="@id/podcastDetailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/podcastDetailsFragment"
+        android:name="ba.codingstoic.podcast.PodcastDetailsFragment"
+        android:label="PodcastDetailsFragment" />
 </navigation>
