--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -6,7 +6,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/login_fragment_username"
+        android:id="@+id/login_fragment_username_wrapper"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login_fragment_username_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_form_username_hint" />
@@ -22,18 +23,31 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/login_fragment_password"
+        android:id="@+id/login_fragment_password_wrapper"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_fragment_username">
+        app:layout_constraintTop_toBottomOf="@id/login_fragment_username_wrapper">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login_fragment_password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_form_password_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/login_fragment_login_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="@id/login_fragment_password_wrapper"
+        app:layout_constraintRight_toRightOf="@id/login_fragment_password_wrapper"
+        app:layout_constraintTop_toBottomOf="@id/login_fragment_password_wrapper" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
