navigate to login if user is not authenticated, add events to navigate to home once user is authenticated

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -2,8 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_graph.xml"
-    app:startDestination="@id/mainFragment">
+    android:id="@+id/navigation_graph.xml">
 
     <fragment
         android:id="@+id/mainFragment"
@@ -22,4 +21,16 @@
         android:id="@+id/podcastDetailsFragment"
         android:name="ba.codingstoic.podcast.PodcastDetailsFragment"
         android:label="PodcastDetailsFragment" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="ba.codingstoic.user.LoginFragment"
+        android:label="LoginFragment">
+        <action
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
 </navigation>
