--- a/app/src/main/res/layout/podcast_row.xml
+++ b/app/src/main/res/layout/podcast_row.xml
@@ -11,15 +11,16 @@
         android:id="@+id/podcast_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_mic_black_24dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_mic_black_24dp" />
 
     <TextView
         android:id="@+id/podcast_title"
+        style="@style/TextAppearance.AppCompat.Caption"
+        android:textSize="18sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/podcast_image"
         app:layout_constraintLeft_toRightOf="@id/podcast_image"
