--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:show_timeout="0"
             app:controller_layout_id="@layout/exo_player_view_mini"
             app:layout_constraintTop_toTopOf="parent" />
 
