--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:animateLayoutChanges="true"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
@@ -31,10 +31,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_activity_bottom_sheet"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:visibility="visible">
 
@@ -50,29 +50,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/mini_player_margins"
-            tools:text="Podcast title - Episode Title"
             android:textColor="@color/white"
-            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/mini_player_background"
             app:layout_constraintLeft_toLeftOf="@id/mini_player_background"
-            app:layout_constraintTop_toTopOf="@id/mini_player_background" />
+            app:layout_constraintTop_toTopOf="@id/mini_player_background"
+            tools:text="Podcast title - Episode Title" />
 
         <com.google.android.exoplayer2.ui.PlayerControlView
             android:id="@+id/player_view"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:show_timeout="0"
+            android:layout_marginEnd="@dimen/mini_player_margins"
             app:controller_layout_id="@layout/exo_player_view_mini"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:show_timeout="0" />
 
         <ImageView
             android:id="@+id/player_podcast_image"
             android:layout_width="200dp"
-            android:visibility="gone"
             android:layout_height="200dp"
             android:src="@drawable/ic_mic_black_24dp"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/player_view" />
