--- a/app/src/main/res/layout/podcast_details_podcast_row.xml
+++ b/app/src/main/res/layout/podcast_details_podcast_row.xml
@@ -7,8 +7,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/podcast_details_podcast_row_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -16,6 +17,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/podcast_details_podcast_row_title"
+        style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
