--- a/app/src/main/res/layout/podcast_details_episode_row.xml
+++ b/app/src/main/res/layout/podcast_details_episode_row.xml
@@ -9,14 +9,16 @@
         android:id="@+id/episode_row_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:ellipsize="end"
         android:gravity="start"
+        android:maxLines="2"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/episode_row_play_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Episode title" />
+        tools:text="Episode title and tile and title and title and title " />
 
     <ImageView
         android:id="@+id/episode_row_play_button"
