--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    app:layout_constraintBottom_toTopOf="@id/main_activity_collapsed_player"
+    app:layout_constraintTop_toTopOf="parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -31,29 +34,29 @@
         app:navGraph="@navigation/navigation_graph" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_activity_bottom_sheet"
+        android:id="@+id/main_activity_collapsed_player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:background="@color/white"
+        app:behavior_peekHeight="50dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        tools:visibility="visible">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <View
             android:id="@+id/mini_player_background"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorPrimaryDark"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/current_episode_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/mini_player_margins"
-            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/mini_player_background"
             app:layout_constraintLeft_toLeftOf="@id/mini_player_background"
+            app:layout_constraintRight_toLeftOf="@id/player_view"
             app:layout_constraintTop_toTopOf="@id/mini_player_background"
             tools:text="Podcast title - Episode Title" />
 
@@ -63,19 +66,16 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/mini_player_margins"
             app:controller_layout_id="@layout/exo_player_view_mini"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/mini_player_background"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/mini_player_background"
             app:show_timeout="0" />
 
-        <ImageView
-            android:id="@+id/player_podcast_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/ic_mic_black_24dp"
-            android:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/player_view" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/playlist_rv"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            app:layout_constraintTop_toBottomOf="@id/mini_player_background" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
