--- a/app/src/main/res/layout/exo_player_view_mini.xml
+++ b/app/src/main/res/layout/exo_player_view_mini.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:background="@color/colorPrimaryDark">
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/exo_play"
@@ -16,7 +14,6 @@
         android:padding="0dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_play_circle_outline_black_24dp"
-        android:tint="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +27,6 @@
         android:padding="0dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_pause_circle_outline_black_24dp"
-        android:tint="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
